stylesheet.less
/* ... */
/* ===============================
   5. Extended Navigation
   =============================== */
.widget {
	&.extendednavigation {
		float: left;
		width: 100%;
		ul {
			display: inline-block;
			list-style: none;
			padding: 5px 0;
			width: 100%;
			border-top: 2px solid fade(@color-swatch5, 25%);
			border-bottom: 2px solid fade(@color-swatch5, 25%);
			margin: 30px auto 20px;
			text-align: center;
			@media @tablet {
				/* Hidden until nav icon is clicked */
				display: none;
				/* Then these styles are applied */
				width: 100%;
				margin: 80px 0 60px;
				background-color: @color-swatch1;
				border: none;
			}

			/* ALIGN CENTER */
			&.align-center {
				li {
					text-align: center;
					&:hover {
						li {
							text-align: center;
						}
					}
				}
			}
			/* ALIGN LEFT */
			&.align-left {
				li {
					text-align: left;
					&:hover {
						li {
							text-align: left;
						}
					}
				}
			}
			/* ALIGN RIGHT */
			&.align-right {
				li {
					text-align: right;
					&:hover {
						li {
							text-align: right;
						}
					}
				}
			}
			li {
				padding: 10px 0;
				margin: 0 0.25em;
				display: inline-block;
				*display:inline; /*IE7*/
				*zoom:1; /*IE7*/
				float: none;
				@media @tablet {
					width: 100%;
					padding: 1em 0;
					border-bottom: 1px solid fade(@color-swatch5, 25%);
				}

				a {
					display: block;
					font-family:@font-swatch6-font-family;
					font-size:@font-swatch6-font-size;
					font-weight: @font-swatch6-font-weight;
					color: @font-swatch6-color;
					line-height:@font-swatch6-line-height;
					letter-spacing: @font-swatch6-letter-spacing;
					padding: 0 15px;
					&:hover {
						color: @font-swatch6-color-hover;
						text-decoration: none;
					}
					&:after {
						color: @color-swatch6;
					}
				}
				&:last-child a:after {
					content: "";
				}
				&.folder {
					ul {
						border: 2px solid fade(@color-swatch5, 25%);
						li {
							margin: 0;
						}
					}
				}
			}
		}
		a {
			&.pull {
				display: none;
				@media @tablet {
					display: block;
					position: relative;
					width: 100%;
					border-bottom: 3px solid @color-swatch5;
					margin: 10px 0 30px;
					height: 50px;
					overflow: visible;
					left: 4px;
					top: 0;
					&:after {
						content:"";
						background: @color-swatch7 image('/images/nav-icon.png') no-repeat;
						background-position: center;
						border: 3px solid @color-swatch5;
						box-shadow: none;
						-moz-box-shadow: none;
						width: 50px;
						height: 50px;
						top: 20px;
						right: 0;
						left: 0;
						margin: 0 auto;
						position: absolute;
						display: inline-block;
						-webkit-border-radius: 100px;
						-moz-border-radius: 100px;
						border-radius: 100px;
					}
				}
			}
		}
	}
}

.widget {
    &.menusections {
        padding: 0 2%;
        margin: 1em 0;
        @media @tablet {
            border: none;
            margin: 2em 0 1em;
        }
        ul {
            margin: 0;
            display: block;
            text-align: center;
            @media @tablet {
                width: 100%;
                border-top: 2px solid fade(@color-swatch5, 20%);
                border-bottom: 2px solid fade(@color-swatch5, 20%);
                padding: 0.25em 0;
                margin: 1.5em auto;
            }
            li {
                margin: 0 0.5em;
                &:first-child {
                    margin-left: 0;
                    @media @mobile {
                        margin: 0;
                    }
                    a {
                        @media @tablet {
                            padding-left: 0;
                        }
                    }
                }
                a {
                    font-family:@font-swatch6-font-family;
                    font-size:@font-swatch6-font-size;
                    font-weight: @font-swatch6-font-weight;
                    color: @font-swatch6-color;
                    line-height:@font-swatch6-line-height;
                    letter-spacing: @font-swatch6-letter-spacing;
                    &:hover {
                        color: @color-swatch3;
                        text-decoration: none;
                    }
                    &:after {
                        content: "\00b0";
                        color: fade(@color-swatch5, 25%);
                        padding-left: 1.5em;
                        position: relative;
                        top: 4px;
                        @media @tablet {
                            display: none;
                        }
                    }
                }
                @media @tablet {
                    border-bottom: 1px solid fade(@color-swatch5, 20%);
                    margin: 0;
                    width: 100%;
                    padding: 1em 0;
                }
                &:last-child {
                    border-bottom: 0;
                    a:after {
                        display: none;
                    }
                }
            }
        }
    }  /* end menu sections */
}
/* ... */

